# src/app/air-quality/models/dto/datetime.dto.ts
@@ -1,0 +1,1 @@
+export interface DateTimeDto{ ts: string }
